--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "type": "commonjs",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "markdown-it-anchor": "^9.2.0"
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-attrs": "^4.3.1"
   },
   "dependencies": {
     "a-sync-waterfall": "^1.0.1",
