--- a/src/_data/pdf_projects.json
+++ b/src/_data/pdf_projects.json
@@ -1,16 +1,17 @@
 [
   {
+    "slug": "mango-metrics-pdf-case",
     "card_id": "PETI009",
     "title": "Mango Metrics — PDF Case",
     "client": "The Agri-Journal",
-    "image": "https://picsum.photos/1200/600?random=22",  
-    "image_alt": "Mango charts and crate label",
-    "url": "/assets/pdfs/mango-metrics.pdf",     
+    "image": "",
+    "image_alt": "",
+    "url": "/assets/pdfs/mango-metrics.pdf",
     "tags": ["projects", "pdf", "viz"],
     "year": 2024,
-    "date": "2024-07-01",                         
+    "date": "2024-07-01",
     "status": "Published",
-    "featured": false,                             
-    "isPdf": true                                
+    "featured": false,
+    "isPdf": true
   }
 ]
